Updated Object to include Lists to maintain order

--- a/style.css
+++ b/style.css
@@ -10,10 +10,9 @@ nav > ul {
     display: flex;
     border-radius: 5px;
     display: flex;
-    justify-content: stretch;
 }
 
-nav ul li {
+nav li {
     display: flex;
     background: aquamarine;
     flex-direction: column;
