--- a/src/styles/imageSlider.css
+++ b/src/styles/imageSlider.css
@@ -22,7 +22,6 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
     gap: 2px;
     flex-wrap: wrap;
 }
@@ -36,6 +35,19 @@ img {
 }
 
 .imageFrame.active {
+    animation: fade 300ms ease-in forwards;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0.7;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.imageFrame.active {
     display: flex;
 }
 
@@ -43,6 +55,7 @@ img {
     height: 100%;
     width: 100%;
 }
+
 
 .directionContainer {
     position: absolute;
@@ -92,3 +105,4 @@ img {
 .sliderDirection:hover {
     opacity: 1;
 }
+
